# ComfyUI-VibeVoice-HF-ASR

./: README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
js/: vibevoice_hf.js
