[project]
name = "comfyui-vibevoice-hf-asr"
description = "Pure HuggingFace native ComfyUI ASR nodes for the microsoft/VibeVoice-ASR-HF model, free from legacy audio tooling wrappers."
version = "1.0.0"
classifiers = [
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: GPU :: Apple Metal",
]

[project.urls]
Repository = "https://github.com/williamgateszhao/ComfyUI-VibeVoice-HF-ASR"
Documentation = "https://github.com/williamgateszhao/ComfyUI-VibeVoice-HF-ASR/blob/main/README.md"
"Bug Tracker" = "https://github.com/williamgateszhao/ComfyUI-VibeVoice-HF-ASR/issues"

[tool.comfy]
PublisherId = "williamgateszhao"
DisplayName = "ComfyUI-VibeVoice-HF-ASR"
Icon = ""
